# patient_monitoring_system

./: .gitignore  README.md  docker-compose.yml
fake_sensor/: fake_data_generator.py
server/: Dockerfile  pyproject.toml
server/sensor_data/: admin.py  models.py  permissions.py  serializers.py  views.py
server/sensor_data/migrations/: 0001_initial.py  0002_auto_20210522_1819.py
server/server/: settings.py  urls.py
server/static/: add-appointment.html  add-department.html  add-doctor.html  add-patient.html  add-schedule.html  appointments.html  departments.html  doctors.html  edit-appointment.html  edit-department.html  edit-doctor.html  edit-patient.html  edit-profile.html  edit-schedule.html  error-404.html  error-500.html  index-2.html  index.html  login.html  patients.html  profile.html  register.html  schedule.html  tables-basic.html  tables-datatables.html  tabs.html
server/static/assets/css/: style.css
server/static/assets/js/: jquery-ui.min.html
server/users/: admin.py  forms.py  models.py  views.py
server/users/migrations/: 0001_initial.py  0001_squashed_0003_alter_patient_user.py  0002_alter_patient_doctors.py  0003_alter_patient_doctors.py
server/users/templates/: header.html  login.html  register.html
